Changelog
=========

2020.3.0rc3 (unreleased)
------------------------

- Add `is_admin_menu_visible` to the `@config` API endpoint. [mbaechtold]
- Watchers GET API: Also include info about referenced_users and referenced_watcher_roles. [tinagerber]
- Fix @solrsearch endpoint default sort order. [elioschmutz]


2020.3.0rc2 (2020-05-07)
------------------------

- Drop sorting by sortable_author for solr and avoid handling sorting parameters as fields. [deiferni]
- Add live chat to online documentation. [njohner]
- Bump ftw.monitor and ftw.contentstats to get performance metrics. [lgraf]
- Merge notification settings for tasks. [elioschmutz]
- Add more metadata to response of favorites endpoint (`review_state`, `is_subdossier` and `is_leafnode`). [mbaechtold]
- Improve performance when resolving large dossiers. [deiferni]
- Add attributes `review_state`, `is_subdossier` and `is_leafnode` to the search results returned by `@solrsearch` and `@livesearch`. [mbaechtold]
- Add attribute `is_subdossier` to the children for GET requests to the API. [mbaechtold]
- Add is_subdossier to catalog metadata. [deiferni]
- Add @watchers endpoint for tasks and inbox forwardings. [tinagerber]
- Fix show proposal templates corresponding to the committee. [2e12]
- Add Bumblebee auto refresh feature to policy template. [2e12]
- Task GET API: Also include info about containing dossier. [mbaechtold]
- Enhance the API endpoint `@breadcrumbs` with more attributes. [mbaechtold]
- Add key `is_leafnode` to the API endpoint `@navigation`. [mbaechtold]
- Fix `task_type_helper` to respect the current language for the ram-cache. [elioschmutz]
- Always use Solr for tabbedview listings. [buchi]
- Enable Solr by default. [buchi]
- Fix exclusion of search root when using Solr. [buchi]
- Add retention_expiration to Solr schema. [buchi]
- Add support for date range queries using Solr. [buchi]
- Add support for contact lookup by email2 using Solr. [buchi]